--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "meetscheduler",
 	"description": "Seja lembrado de seus compromissos no Google Meet, com o MeetScheduler.",
-	"version": "1.1.3",
+	"version": "1.2.3",
 	"author": "Gepetojj",
 	"homepage": "./",
 	"main": "build/main.js",
@@ -14,8 +14,7 @@
 		"eject": "react-scripts eject",
 		"watch:electron": "tsc --watch --project electron/tsconfig.json",
 		"dev": "concurrently \"yarn watch:electron\" \"yarn start:electron\"",
-		"dist": "yarn build && yarn build:electron && electron-builder build -w",
-		"publish": "electron-builder build -w --publish always"
+		"dist": "yarn build && yarn build:electron && electron-builder build -w --publish always"
 	},
 	"dependencies": {
 		"@material-ui/core": "^4.12.3",
@@ -79,7 +78,8 @@
 			{
 				"provider": "github",
 				"owner": "gepetojj",
-				"repo": "meetscheduler"
+				"repo": "meetscheduler",
+				"releaseType": "release"
 			}
 		],
 		"files": [
