--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "meetscheduler",
 	"description": "Seja lembrado de seus compromissos no Google Meet, com o MeetScheduler.",
-	"version": "1.2.3",
+	"version": "1.3.3",
 	"author": "Gepetojj",
 	"homepage": "./",
 	"main": "build/main.js",
@@ -18,6 +18,7 @@
 	},
 	"dependencies": {
 		"@material-ui/core": "^4.12.3",
+		"@material-ui/icons": "^4.11.2",
 		"@testing-library/jest-dom": "^5.11.4",
 		"@testing-library/react": "^11.1.0",
 		"@testing-library/user-event": "^12.1.10",
