--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "meetscheduler",
 	"description": "Seja lembrado de seus compromissos no Google Meet, com o MeetScheduler.",
-	"version": "1.3.5",
+	"version": "1.4.6",
 	"author": "Gepetojj",
 	"homepage": "./",
 	"main": "build/main.js",
@@ -28,6 +28,7 @@
 		"electron-updater": "^4.3.9",
 		"notistack": "^1.0.10",
 		"react": "^17.0.2",
+		"react-beautiful-dnd": "^13.1.0",
 		"react-dom": "^17.0.2",
 		"react-icons": "^4.2.0",
 		"react-router-dom": "^5.2.0",
@@ -41,6 +42,7 @@
 		"@types/jest": "^27.0.1",
 		"@types/node": "^16.6.1",
 		"@types/react": "^17.0.18",
+		"@types/react-beautiful-dnd": "^13.1.1",
 		"@types/react-dom": "^17.0.9",
 		"@types/react-router-dom": "^5.1.8",
 		"@types/styled-components": "^5.1.12",
