Atualização: Melhorias de performance / Correção: Margem do último elemento do modal de edição de compromisso / Correção: Sufixos eram adicionados automaticamente de forma errada / outras pequenas mudanças

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,9 +1,11 @@
 {
 	"short_name": "MeetScheduler",
 	"name": "MeetScheduler",
-	"icons": [],
+	"icons": [
+		"icon.ico"
+	],
 	"start_url": ".",
 	"display": "standalone",
-	"theme_color": "#8826af",
-	"background_color": "#0c070e"
+	"theme_color": "#6958C9",
+	"background_color": "#39375B"
 }
