--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "meetscheduler",
 	"description": "Seja lembrado de seus compromissos no Google Meet, com o MeetScheduler.",
-	"version": "1.6.7",
+	"version": "1.7.0",
 	"author": "Gepetojj",
 	"homepage": "./",
 	"main": "build/main.js",
@@ -10,18 +10,15 @@
 		"start:electron": "ts-node --skip-project \"electron/devElectron.ts\"",
 		"build": "react-scripts build",
 		"build:electron": "tsc --project electron/tsconfig.json",
-		"test": "react-scripts test",
-		"eject": "react-scripts eject",
 		"watch:electron": "tsc --watch --project electron/tsconfig.json",
 		"dev": "concurrently \"yarn watch:electron\" \"yarn start:electron\"",
-		"dist": "yarn build && yarn build:electron && electron-builder build -w --publish always"
+		"dist": "yarn build && yarn build:electron && electron-builder build -w --publish always",
+		"format": "prettier --write .",
+		"lint": "eslint ."
 	},
 	"dependencies": {
 		"@material-ui/core": "^4.12.3",
 		"@material-ui/icons": "^4.11.2",
-		"@testing-library/jest-dom": "^5.11.4",
-		"@testing-library/react": "^11.1.0",
-		"@testing-library/user-event": "^12.1.10",
 		"dayjs": "^1.10.6",
 		"dotenv": "^10.0.0",
 		"electron-log": "^4.4.1",
@@ -32,33 +29,37 @@
 		"react-dom": "^17.0.2",
 		"react-icons": "^4.2.0",
 		"react-router-dom": "^5.2.0",
-		"react-scripts": "4.0.3",
+		"react-scripts": "^4.0.3",
 		"reactjs-popup": "^2.0.5",
-		"styled-components": "^5.3.0",
+		"styled-components": "^5.3.3",
 		"uniqid": "^5.3.0",
 		"v8-compile-cache": "^2.3.0"
 	},
 	"devDependencies": {
-		"@types/jest": "^27.0.1",
+		"@trivago/prettier-plugin-sort-imports": "^3.1.0",
 		"@types/node": "^16.6.1",
-		"@types/react": "^17.0.18",
+		"@types/react": "^17.0.34",
 		"@types/react-beautiful-dnd": "^13.1.1",
-		"@types/react-dom": "^17.0.9",
+		"@types/react-dom": "^17.0.11",
 		"@types/react-router-dom": "^5.1.8",
-		"@types/styled-components": "^5.1.12",
+		"@types/styled-components": "^5.1.15",
 		"@types/uniqid": "^5.3.1",
+		"@typescript-eslint/eslint-plugin": "^5.3.0",
+		"@typescript-eslint/parser": "^5.3.0",
+		"babel-eslint": "^10.1.0",
 		"concurrently": "^6.2.1",
 		"electron": "^13.2.0",
 		"electron-builder": "^22.11.7",
+		"eslint-config-react-app": "^6.0.0",
+		"eslint-plugin-flowtype": "^8.0.3",
+		"eslint-plugin-import": "^2.25.2",
+		"eslint-plugin-jsx-a11y": "^6.4.1",
+		"eslint-plugin-react": "^7.26.1",
+		"eslint-plugin-react-hooks": "^4.2.0",
 		"nodemon": "^2.0.12",
+		"prettier": "^2.4.1",
 		"ts-node": "^10.2.0",
 		"typescript": "^4.3.5"
-	},
-	"eslintConfig": {
-		"extends": [
-			"react-app",
-			"react-app/jest"
-		]
 	},
 	"browserslist": {
 		"production": [
